Activer le mode journal!!

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,7 @@
 contentDir: contenus
 
+DefaultContentLanguage: fr
+
 # use a forked version of minos
 # https://github.com/livrenum/hugo-theme-minos
 theme: minos
